🏭🚦 Checkpoint ./blooketbot.js:49854295/48 ./index.html:49854295/47

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
+    <title>Blooket Bot</title>
     <style>
       .normtext {
         font-size: 40px;
