🛰🌾 Checkpoint ./script.js:49854295/43999 ./index.html:49854295/326 ./blooketbot.js:49854295/7486

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ font-size: 23px;
         </div>
       </div>
       <div id="ctrlpanel"></div>
+    <div class="normtext" id="status">Status: Connecting...</div>
     <div class="_errorBar_1mkqb_126" id="error" style="transform: translateY(0%);"></div>
     </div>
     <script>
