🌃🐽 Checkpoint ./script.js:49854295/25 ./index.html:49854295/227

--- a/index.html
+++ b/index.html
@@ -54,10 +54,18 @@ font-size: 23px;
 .cheatcontainer > * {
     margin: 15px;
 }
+      .mainbody {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+      }
+.idinp
     </style>
   </head>
   <body>
-    <div class="_body_di4r2_71" style="z-index:0;background-color: rgb(9, 148, 65);overflow: hidden;">
+    <div class="mainbody" style="background-color: rgb(9, 148, 65);overflow: hidden;">
       <div class="codecontainer" id="cc">
         <div class="normtext">Enter code:</div>
         <div class="_idInputContainer_1mkqb_63">
