--- a/index.html
+++ b/index.html
@@ -54,22 +54,52 @@ font-size: 23px;
 .cheatcontainer > * {
     margin: 15px;
 }
+      body {
+    font-family: Nunito, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #3a3a3a;
+      }
       .mainbody {
     margin: 0;
     padding: 0;
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    min-height: 100vh;
       }
-.idinp
+      .idinputcontainer {
+    width: 200px;
+    height: 60px;
+    padding-bottom: 6px;
+    box-shadow: inset 0 -6px #0003, 0 0 4px #00000026;
+    background-color: #fff;
+    border-radius: 6px;
+    touch-action: manipulation;
+      }
+      .idinput {
+        width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+    padding: 5px;
+    box-sizing: border-box;
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    font-family: Nunito, sans-serif;
+    outline: none;
+    color: #5f5f5f;
+      }
     </style>
   </head>
   <body>
     <div class="mainbody" style="background-color: rgb(9, 148, 65);overflow: hidden;">
       <div class="codecontainer" id="cc">
         <div class="normtext">Enter code:</div>
-        <div class="_idInputContainer_1mkqb_63">
-          <input id="gcode" class="_idInput_1mkqb_63" placeholder="Game ID">
+        <div class="idinputcontainer">
+          <input id="gcode" class="idinput" placeholder="Game ID">
         </div>
 	<div class="_nameInputContainer_1pk02_71">
           <input id="gname" class="_nameInput_1pk02_71" placeholder="Nickname">
