💁🍁 Checkpoint ./index.html:49854295/5748 ./script.js:49854295/29779 ./blooketbot.js:49854295/10471

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@ checkbox[checked]::before {
         <div class="_joinButton_1mkqb_87" onclick="join();" role="button">
           <div class="btext">Join</div>
         </div>
+	<button onclick="brosOcr();">Get Best Bros Game Id(BETA)</button><br>
+	<text class="normtext" style="display:none;" id="ostatus"></text>
 	<text class="normtext">First Place Switch:</text><checkbox id="fpswitch"></checkbox>
       </div>
       <div id="ctrlpanel"></div>
