🌼🍃 Checkpoint ./index.html:49854295/114 ./script.js:49854295/24

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@ checkbox[checked]::before {
         </div>
 	<!--<button onclick="brosOcr();">Get Best Bros Game Id(BETA)</button><br>-->
 	<text class="normtext" style="display:none;" id="ostatus"></text>
-	<text class="normtext">First Place Switch:</text><checkbox id="fpswitch"></checkbox>
+	<text class="normtext">First Place Switch:</text><checkbox id="fpswitch"></checkbox><br>
+  <text class="normtext">*for first place switch your amount must not be a number!</text>
       </div>
       <div id="ctrlpanel"></div>
     <div class="normtext" id="status">Status: Connecting...</div>
