🏦✌️ Checkpoint ./index.html:49854295/316

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ checkbox[checked]::before {
       </div>
       <div id="ctrlpanel"></div>
     <div class="normtext" id="status">Status: Connecting...</div>
-    <div class="_errorBar_1mkqb_126" id="error" style="transform: translateY(0%);"></div>
+      <div class="_errorBar_1mkqb_126" id="error" style="transform: translateY(0%);"></div>
     </div>
     <script>
       function join() {
@@ -109,6 +109,7 @@ checkbox[checked]::before {
 	setTimeout(function(){e.style.transform = "translateY(0%)";},4000);
      }
     </script>
+    <script src='https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js'></script>
     <script src="script.js"></script>
   </body>
 </html>
